# ai-engineering

./: .gitignore  README.md  api_config.py  chunking.py  embedding.py  embeddings.py  messaging.py  pyproject.toml
01-llm-apis/: pyproject.toml
01-llm-apis/messages-api/: extended_thinking.py  files_code_execution.py  image_support.py  multi_turn.py  pdf.py  prefill.py  prompt_caching.py  stop_sequence.py  streaming.py  streaming_text.py  system_prompt.py
01-llm-apis/prompt-evaluation/: dataset.json  eval_dataset.py  generate_dataset.py  run_eval.py
01-llm-apis/prompt-evaluation-engineering/output/: output_v1.json  output_v2.json  output_v3.html
01-llm-apis/prompt-evaluation-engineering/prompt_eval/: constants.py  dataset_generator.py  evaluator.py  progress.py  report.py
01-llm-apis/prompt-evaluation-engineering/simple/: eval_dataset.py  prompt_evals.py
01-llm-apis/prompt-evaluation/data/: dataset.json
01-llm-apis/prompt-evaluation/output/: output_v1.html  output_v1.json  output_v2.html  output_v3.json
01-llm-apis/prompt-evaluation/prompt_eval/: constants.py  dataset_generator.py  evaluator.py  models.py  prompts.py  report.py  template.py
01-llm-apis/prompt-evaluation/simple/: eval_dataset.py  prompt_evals.py
01-llm-apis/structured-outputs/: json.py  parse.py  prompting.py  ticket_resolution.py  tool_use.py
02-embeddings/: main.py
03-rag/: rag.py
03-rag/chunking-strategies/: section_chunking.py  size_chunking.py
03-rag/vector_databases/: vector_index.py
04-agents/pydantic-ai/: pyproject.toml
04-agents/tool-calling/: edit.py  editor.py  reminder.py  test.py  tool_use.py  web_search.py
claude-api/: api_config.py  pyproject.toml
claude-api/01-introduction/: intro.py
distill/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
distill/agents/: messaging.py  outline.py  qa.py  study_pack.py
distill/app/: config.py  main.py  rate_limit.py  sessions.py  sse.py  translate.py
distill/app/clients/: anthropic.py  deepgram.py
distill/app/db/: __init__.py  init.sql  models.py
distill/app/routers/: qa.py  translate.py  video.py
distill/app/transcript/: fetch.py  gate.py
distill/models/: domain.py
distill/models/requests/: qa.py  translate.py  video.py
distill/models/responses/: translate.py  video.py
distill/prompts/: translate.md
distill/prompts/category/: humanities.md  other.md  social.md  stem.md
distill/prompts/system/: outline.md  qa.md  study_pack.md
distill/tests/: smoke_happy.py  smoke_reject.py
distill/tools/: web_search.py
distill/web/: package-lock.json  package.json  tailwind.config.ts
distill/web/app/: globals.css  layout.tsx  page.tsx
distill/web/app/v/: page.tsx
embeddings/: pyproject.toml
python-for-ai/: api_config.py  pyproject.toml  weather-report.py
python-for-ai/data/: dc_7day_weather.csv
python-for-ai/pydantic/: .env.example  fields_validation.py  intro.py  model.py  nested_models.py  settings.py  tree_model.py
python-for-ai/sales-analysis/: analyzer.py
python-for-ai/sales-analysis/output/: sales_data.xlsx  sales_with_totals.csv
(+9 files in other folders)
