[project]
name = "01-llm-apis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.96.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.11",
]
