[project]
name = "claude-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.96.0",
    "dotenv>=0.9.9",
]

[tool.setuptools]
py-modules = ["api_config"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.11",
]
