[project]
name = "distill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.96.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
